feat: DB-51 | add count route for posts
